--- a/.gitignore
+++ b/.gitignore
@@ -132,12 +132,8 @@ publish/
 
 # NuGet Packages
 *.nupkg
-# The packages folder can be ignored because of Package Restore
-**/packages/*
-# except build/, which is used as an MSBuild target.
-!**/packages/build/
-# If using the old MSBuild-Integrated Package Restore, uncomment this:
-#!**/packages/repositories.config
+packages/
+.nuget/NuGet.exe
 
 # Windows Azure Build Output
 csx/
@@ -181,3 +177,8 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+
+# Mercurial
+*.orig
+.hg
+.hgignore
